// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`babel plugin core (bundle mode) autoworkletization workletizes useAnimatedStyle callback 1`] = `
"import { useAnimatedStyle } from 'react-native-reanimated';
function Box() {
  const style = useAnimatedStyle(require("react-native-worklets/.worklets/16304373026183.js").default({}));
}"
`;

exports[`babel plugin core (bundle mode) autoworkletization workletizes useAnimatedStyle callback 2`] = `
"export default (function testJs1Factory({}) {
  const testJs1 = function () {
    "use no memo";

    return {
      width: 100
    };
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 16304373026183;
  testJs1.__pluginVersion = "x.y.z";
  return testJs1;
});"
`;

exports[`babel plugin core (bundle mode) closure handling captures locally bound variables shadowing globals 1`] = `
"export default (function f_testJs1Factory({
  console
}) {
  const f = function () {
    console.log(console);
  };
  f.__closure = {
    console
  };
  f.__workletHash = 16880126594815;
  f.__pluginVersion = "x.y.z";
  return f;
});"
`;

exports[`babel plugin core (bundle mode) closure handling captures multiple closure variables 1`] = `
"export default (function foo_testJs1Factory({
  a,
  b
}) {
  const foo = function () {
    return a + b;
  };
  foo.__closure = {
    a,
    b
  };
  foo.__workletHash = 13996627615150;
  foo.__pluginVersion = "x.y.z";
  return foo;
});"
`;

exports[`babel plugin core (bundle mode) closure handling does not capture default globals 1`] = `
"export default (function f_testJs1Factory({}) {
  const f = function () {
    console.log('hi');
    return Math.random();
  };
  f.__closure = {};
  f.__workletHash = 861694609719;
  f.__pluginVersion = "x.y.z";
  return f;
});"
`;

exports[`babel plugin core (bundle mode) for react-compiler prevents outlining from worklet functions 1`] = `
"export default (function testJs1Factory({}) {
  const testJs1 = function () {
    "use no memo";

    return [1, 2, 3].map(() => null);
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 10677258624486;
  testJs1.__pluginVersion = "x.y.z";
  return testJs1;
});"
`;

exports[`babel plugin core (bundle mode) without worklets leaves code untouched and emits no factory 1`] = `
"function foo() {
  var x = 1;
}"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes ArrowFunctionExpression 1`] = `"const foo = require("react-native-worklets/.worklets/1844848981365.js").default({});"`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes ArrowFunctionExpression 2`] = `
"export default (function testJs1Factory({}) {
  const testJs1 = function (x) {
    return x + 2;
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 1844848981365;
  testJs1.__pluginVersion = "x.y.z";
  return testJs1;
});"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes FunctionDeclaration 1`] = `"const foo = require("react-native-worklets/.worklets/309188718540.js").default({});"`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes FunctionDeclaration 2`] = `
"export default (function foo_testJs1Factory({}) {
  const foo = function (x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 309188718540;
  foo.__pluginVersion = "x.y.z";
  return foo;
});"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes ObjectMethod 1`] = `
"const foo = {
  bar: require("react-native-worklets/.worklets/3278862305819.js").default({})
};"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes ObjectMethod 2`] = `
"export default (function bar_testJs1Factory({}) {
  const bar = function (x) {
    return x + 2;
  };
  bar.__closure = {};
  bar.__workletHash = 3278862305819;
  bar.__pluginVersion = "x.y.z";
  return bar;
});"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes named FunctionExpression 1`] = `"const foo = require("react-native-worklets/.worklets/309188718540.js").default({});"`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes named FunctionExpression 2`] = `
"export default (function foo_testJs1Factory({}) {
  const foo = function (x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 309188718540;
  foo.__pluginVersion = "x.y.z";
  return foo;
});"
`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes unnamed FunctionExpression 1`] = `"const foo = require("react-native-worklets/.worklets/1844848981365.js").default({});"`;

exports[`babel plugin core (bundle mode) worklet shapes workletizes unnamed FunctionExpression 2`] = `
"export default (function testJs1Factory({}) {
  const testJs1 = function (x) {
    return x + 2;
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 1844848981365;
  testJs1.__pluginVersion = "x.y.z";
  return testJs1;
});"
`;

exports[`babel plugin core (bundleless mode) autoworkletization workletizes useAnimatedStyle callback 1`] = `
"import { useAnimatedStyle } from 'react-native-reanimated';
const _worklet_16304373026183_init_data = {
  code: "(function testJs1(){return{width:100};})",
  location: "test.js"
};
function Box() {
  const style = useAnimatedStyle(function testJs1Factory({
    _worklet_16304373026183_init_data
  }) {
    const _e = [new global.Error(), 1, -27];
    const testJs1 = function () {
      "use no memo";

      return {
        width: 100
      };
    };
    testJs1.__closure = {};
    testJs1.__workletHash = 16304373026183;
    testJs1.__pluginVersion = "x.y.z";
    testJs1.__initData = _worklet_16304373026183_init_data;
    testJs1.__stackDetails = _e;
    return testJs1;
  }({
    _worklet_16304373026183_init_data
  }));
}"
`;

exports[`babel plugin core (bundleless mode) closure handling captures locally bound variables shadowing globals 1`] = `
"const console = {
  log: () => 42
};
const _worklet_16880126594815_init_data = {
  code: "(function f_testJs1(){const{console}=this.__closure;console.log(console);})",
  location: "test.js"
};
const f = function f_testJs1Factory({
  _worklet_16880126594815_init_data,
  console
}) {
  const _e = [new global.Error(), -2, -27];
  const f = function () {
    console.log(console);
  };
  f.__closure = {
    console
  };
  f.__workletHash = 16880126594815;
  f.__pluginVersion = "x.y.z";
  f.__initData = _worklet_16880126594815_init_data;
  f.__stackDetails = _e;
  return f;
}({
  _worklet_16880126594815_init_data,
  console
});"
`;

exports[`babel plugin core (bundleless mode) closure handling captures multiple closure variables 1`] = `
"const a = 1;
const b = 2;
const _worklet_13996627615150_init_data = {
  code: "(function foo_testJs1(){const{a,b}=this.__closure;return a+b;})",
  location: "test.js"
};
const foo = function foo_testJs1Factory({
  _worklet_13996627615150_init_data,
  a,
  b
}) {
  const _e = [new global.Error(), -3, -27];
  const foo = function () {
    return a + b;
  };
  foo.__closure = {
    a,
    b
  };
  foo.__workletHash = 13996627615150;
  foo.__pluginVersion = "x.y.z";
  foo.__initData = _worklet_13996627615150_init_data;
  foo.__stackDetails = _e;
  return foo;
}({
  _worklet_13996627615150_init_data,
  a,
  b
});"
`;

exports[`babel plugin core (bundleless mode) closure handling does not capture default globals 1`] = `
"const _worklet_861694609719_init_data = {
  code: "(function f_testJs1(){console.log('hi');return Math.random();})",
  location: "test.js"
};
const f = function f_testJs1Factory({
  _worklet_861694609719_init_data
}) {
  const _e = [new global.Error(), 1, -27];
  const f = function () {
    console.log('hi');
    return Math.random();
  };
  f.__closure = {};
  f.__workletHash = 861694609719;
  f.__pluginVersion = "x.y.z";
  f.__initData = _worklet_861694609719_init_data;
  f.__stackDetails = _e;
  return f;
}({
  _worklet_861694609719_init_data
});"
`;

exports[`babel plugin core (bundleless mode) for react-compiler prevents outlining from worklet functions 1`] = `
"import { c as _c } from "react/compiler-runtime";
const _worklet_10677258624486_init_data = {
  code: "(function testJs1(){return[1,2,3].map(function(){return null;});})",
  location: "test.js"
};
const TestComponent = t0 => {
  const $ = _c(2);
  if ($[0] !== "334946d229dc920aaf28bb8fd0705f10807290a3162fa05fe7deecf7dce3a2a2") {
    for (let $i = 0; $i < 2; $i += 1) {
      $[$i] = Symbol.for("react.memo_cache_sentinel");
    }
    $[0] = "334946d229dc920aaf28bb8fd0705f10807290a3162fa05fe7deecf7dce3a2a2";
  }
  let t1;
  if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
    t1 = function testJs1Factory({
      _worklet_10677258624486_init_data
    }) {
      const _e = [new global.Error(), 1, -27];
      const testJs1 = function () {
        "use no memo";

        return [1, 2, 3].map(() => null);
      };
      testJs1.__closure = {};
      testJs1.__workletHash = 10677258624486;
      testJs1.__pluginVersion = "x.y.z";
      testJs1.__initData = _worklet_10677258624486_init_data;
      testJs1.__stackDetails = _e;
      return testJs1;
    }({
      _worklet_10677258624486_init_data
    });
    $[1] = t1;
  } else {
    t1 = $[1];
  }
  useDerivedValue(t1);
  return null;
};"
`;

exports[`babel plugin core (bundleless mode) without worklets leaves code untouched and emits no factory 1`] = `
"function foo() {
  var x = 1;
}"
`;

exports[`babel plugin core (bundleless mode) worklet shapes workletizes ArrowFunctionExpression 1`] = `
"const _worklet_1844848981365_init_data = {
  code: "(function testJs1(x){return x+2;})",
  location: "test.js"
};
const foo = function testJs1Factory({
  _worklet_1844848981365_init_data
}) {
  const _e = [new global.Error(), 1, -27];
  const testJs1 = function (x) {
    return x + 2;
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 1844848981365;
  testJs1.__pluginVersion = "x.y.z";
  testJs1.__initData = _worklet_1844848981365_init_data;
  testJs1.__stackDetails = _e;
  return testJs1;
}({
  _worklet_1844848981365_init_data
});"
`;

exports[`babel plugin core (bundleless mode) worklet shapes workletizes FunctionDeclaration 1`] = `
"const _worklet_309188718540_init_data = {
  code: "(function foo_testJs1(x){return x+2;})",
  location: "test.js"
};
const foo = function foo_testJs1Factory({
  _worklet_309188718540_init_data
}) {
  const _e = [new global.Error(), 1, -27];
  const foo = function (x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 309188718540;
  foo.__pluginVersion = "x.y.z";
  foo.__initData = _worklet_309188718540_init_data;
  foo.__stackDetails = _e;
  return foo;
}({
  _worklet_309188718540_init_data
});"
`;

exports[`babel plugin core (bundleless mode) worklet shapes workletizes ObjectMethod 1`] = `
"const _worklet_3278862305819_init_data = {
  code: "(function bar_testJs1(x){return x+2;})",
  location: "test.js"
};
const foo = {
  bar: function bar_testJs1Factory({
    _worklet_3278862305819_init_data
  }) {
    const _e = [new global.Error(), 1, -27];
    const bar = function (x) {
      return x + 2;
    };
    bar.__closure = {};
    bar.__workletHash = 3278862305819;
    bar.__pluginVersion = "x.y.z";
    bar.__initData = _worklet_3278862305819_init_data;
    bar.__stackDetails = _e;
    return bar;
  }({
    _worklet_3278862305819_init_data
  })
};"
`;

exports[`babel plugin core (bundleless mode) worklet shapes workletizes named FunctionExpression 1`] = `
"const _worklet_309188718540_init_data = {
  code: "(function foo_testJs1(x){return x+2;})",
  location: "test.js"
};
const foo = function foo_testJs1Factory({
  _worklet_309188718540_init_data
}) {
  const _e = [new global.Error(), 1, -27];
  const foo = function (x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 309188718540;
  foo.__pluginVersion = "x.y.z";
  foo.__initData = _worklet_309188718540_init_data;
  foo.__stackDetails = _e;
  return foo;
}({
  _worklet_309188718540_init_data
});"
`;

exports[`babel plugin core (bundleless mode) worklet shapes workletizes unnamed FunctionExpression 1`] = `
"const _worklet_1844848981365_init_data = {
  code: "(function testJs1(x){return x+2;})",
  location: "test.js"
};
const foo = function testJs1Factory({
  _worklet_1844848981365_init_data
}) {
  const _e = [new global.Error(), 1, -27];
  const testJs1 = function (x) {
    return x + 2;
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 1844848981365;
  testJs1.__pluginVersion = "x.y.z";
  testJs1.__initData = _worklet_1844848981365_init_data;
  testJs1.__stackDetails = _e;
  return testJs1;
}({
  _worklet_1844848981365_init_data
});"
`;
